# kafka-protocol

./: Cargo.toml
.devcontainer/: devcontainer.json
data/: JoinGroupRequest.json  JoinGroupResponse.json
src/: encoder.rs  error.rs  lib.rs
src/de/: decoders.rs  mod.rs  varint.rs
src/messages/: join_group.rs  mod.rs  request_header.rs  response_header.rs
src/ser/: encoder.rs  mod.rs  proto.rs  varint.rs
