[package]
name = "kafka-protocol"
version = "0.1.0"
authors = ["vscode"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "*", features = ["derive"] }
linked-hash-map = { version = "*", features = ["serde_impl"] }
#byteorder = "*"
thiserror = "*"
uuid = "*"